// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Chips should render with cross 1`] = `
<Chips
  items={
    Array [
      Object {
        "children": "Ручка для пакета",
        "withCross": true,
      },
      Object {
        "children": "Спортивные кружки",
        "withCross": true,
      },
      Object {
        "children": "Пакеты пищевые",
        "withCross": true,
      },
    ]
  }
>
  <div
    className="list"
  >
    <a
      className="item"
      key="0"
      onClick={[Function]}
      role="button"
    >
      Ручка для пакета
      <CrossSVG
        className="cross-svg"
      >
        <svg
          className="cross-svg"
          height={16}
          viewBox="0 0 16 16"
          width={16}
        >
          <path
            d="M12.707 4.707a1 1 0 00-1.414-1.414L8 6.586 4.707 3.293a1 1 0 00-1.414 1.414L6.586 8l-3.293 3.293a1 1 0 101.414 1.414L8 9.414l3.293 3.293a1 1 0 001.414-1.414L9.414 8l3.293-3.293z"
          />
        </svg>
      </CrossSVG>
    </a>
    <a
      className="item"
      key="1"
      onClick={[Function]}
      role="button"
    >
      Спортивные кружки
      <CrossSVG
        className="cross-svg"
      >
        <svg
          className="cross-svg"
          height={16}
          viewBox="0 0 16 16"
          width={16}
        >
          <path
            d="M12.707 4.707a1 1 0 00-1.414-1.414L8 6.586 4.707 3.293a1 1 0 00-1.414 1.414L6.586 8l-3.293 3.293a1 1 0 101.414 1.414L8 9.414l3.293 3.293a1 1 0 001.414-1.414L9.414 8l3.293-3.293z"
          />
        </svg>
      </CrossSVG>
    </a>
    <a
      className="item"
      key="2"
      onClick={[Function]}
      role="button"
    >
      Пакеты пищевые
      <CrossSVG
        className="cross-svg"
      >
        <svg
          className="cross-svg"
          height={16}
          viewBox="0 0 16 16"
          width={16}
        >
          <path
            d="M12.707 4.707a1 1 0 00-1.414-1.414L8 6.586 4.707 3.293a1 1 0 00-1.414 1.414L6.586 8l-3.293 3.293a1 1 0 101.414 1.414L8 9.414l3.293 3.293a1 1 0 001.414-1.414L9.414 8l3.293-3.293z"
          />
        </svg>
      </CrossSVG>
    </a>
  </div>
</Chips>
`;

exports[`Chips should renders correctly 1`] = `
<Chips
  isItemChecked={[Function]}
  items={
    Array [
      Object {
        "children": "Ручка для пакета",
      },
      Object {
        "children": "Спортивные кружки",
      },
      Object {
        "children": "Пакеты пищевые",
      },
      Object {
        "children": "Пакеты для заморозки",
      },
      Object {
        "children": "Домашние животные",
      },
      Object {
        "children": "Дикие звери",
      },
      Object {
        "children": "Крафт пакеты",
      },
      Object {
        "children": "Интерьер",
      },
      Object {
        "children": "Зоотовары",
      },
    ]
  }
  onItemClick={[MockFunction]}
>
  <div
    className="list"
  >
    <a
      className="item"
      key="0"
      onClick={[Function]}
      role="button"
    >
      Ручка для пакета
    </a>
    <a
      className="item"
      key="1"
      onClick={[Function]}
      role="button"
    >
      Спортивные кружки
    </a>
    <a
      className="item checked"
      key="2"
      onClick={[Function]}
      role="button"
    >
      Пакеты пищевые
    </a>
    <a
      className="item"
      key="3"
      onClick={[Function]}
      role="button"
    >
      Пакеты для заморозки
    </a>
    <a
      className="item"
      key="4"
      onClick={[Function]}
      role="button"
    >
      Домашние животные
    </a>
    <a
      className="item"
      key="5"
      onClick={[Function]}
      role="button"
    >
      Дикие звери
    </a>
    <a
      className="item"
      key="6"
      onClick={[Function]}
      role="button"
    >
      Крафт пакеты
    </a>
    <a
      className="item"
      key="7"
      onClick={[Function]}
      role="button"
    >
      Интерьер
    </a>
    <a
      className="item"
      key="8"
      onClick={[Function]}
      role="button"
    >
      Зоотовары
    </a>
  </div>
</Chips>
`;
